MODLISTS-2 Remove a call to Collectors.toList()